# magic-game

./: Cargo.toml  README.md
assets/: hex.glb
assets/meshes/: king.glb  player.glb
examples/: HelloWorld.rs  sky_box.rs
misc/: BoxTextured.gltf  cvt.py
src/: debug.rs  hex_utils.rs  lib.rs  main.rs  plugins.rs  utils.rs
src/config/: hex_grid.rs  mod.rs
src/custom_plugins/: flying_camera.rs  hex_utils.rs  mod.rs
src/plugins/: world_2d.rs  world_3d.rs
src/plugins/world_2d/: camera.rs  config.rs  debug.rs  hex.rs  mouse.rs
src/plugins/world_3d/: animate.rs  camera.rs  config.rs  debug.rs  hex.rs  player.rs  sky.rs  transformation.rs
src/plugins/world_3d/hex/: height_map.rs
src/utils/: camera.rs  debug.rs  hex.rs  mouse.rs
