[package]
name = "magic_game"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.8.1"
bevy-inspector-egui = "0.13.0"
bevy_mod_picking = "0.9.0"